# SWVAnyPeakFinder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SWV_AnyPeakFinder.py  pyproject.toml  requirements.txt  setup.py  test_SWV_AnyPeakFinder.py
.github/workflows/: CI.yml  codeql.yml
SWV_AnyPeakFinder/: SWV_AnyPeakFinder.py  __init__.py  __main__.py  __version__.py  gui.py  logic.py
recipe/: meta.yaml
tests/: test_SWV_AnyPeakFinder.py  test_gui.py  test_logic.py  test_values.py
